// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TwoFactorAuthenticationDisableModal /> should call the delete function 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    data-name="toaster"
    data-react-aria-top-layer="true"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
  </div>
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              Foo 
              <b>
                body
              </b>
              <p
                class="mb-2 mt-3"
              >
                Enter your password.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-userPassword"
                    placeholder="Enter your password"
                    type="password"
                  />
                </div>
              </div>
              <p
                class="mb-2 mt-3"
              >
                Enter a verification code from your authenticator app or a recovery code.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 mr-auto ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Cancel
                </span>
              </button>
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-destructive-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Foo action button text
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should call the delete function 2`] = `
<body
  class="modal-open"
>
  <div />
  <div
    data-name="toaster"
    data-react-aria-top-layer="true"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    >
      <ol
        data-sonner-theme="light"
        data-sonner-toaster="true"
        data-x-position="right"
        data-y-position="bottom"
        dir=""
        style="--front-toast-height: 0px; --width: 356px; --gap: 14px; z-index: 2147483647; --offset-top: 24px; --offset-right: 24px; --offset-bottom: 24px; --offset-left: 24px; --mobile-offset-top: 16px; --mobile-offset-right: 16px; --mobile-offset-bottom: 16px; --mobile-offset-left: 16px;"
        tabindex="-1"
      >
        <li
          class=""
          data-dismissible="true"
          data-expanded="false"
          data-front="true"
          data-index="0"
          data-mounted="true"
          data-promise="false"
          data-removed="false"
          data-sonner-toast=""
          data-styled="false"
          data-swipe-out="false"
          data-swiped="false"
          data-swiping="false"
          data-visible="true"
          data-x-position="right"
          data-y-position="bottom"
          style="--index: 0; --toasts-before: 0; --z-index: 1; --offset: 0px; --initial-height: 0px;"
          tabindex="0"
        >
          <div
            class=""
            data-content=""
          >
            <div
              class=""
              data-title=""
            >
              <div
                aria-label="Two-Factor Authentication token has been reset for undefined."
                aria-live="polite"
                class="ui-toast-toast-6178"
                data-intent="success"
                data-name="toast"
                role="status"
              >
                <div
                  class="ui-toast-icon-6178"
                  data-name="box"
                  style="height: 24px; align-items: center; display: flex;"
                >
                  <span
                    class="ui-icon-icon-b14f ui-icon-md-b14f ui-icon-regularicon-b14f"
                    data-name="icon"
                  >
                    <svg
                      aria-label="check-circle"
                      role="img"
                    >
                      <use
                        href="#check-circle"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  data-name="box"
                  style="flex-grow: 1; flex-direction: column; display: flex;"
                >
                  <div
                    data-name="box"
                    style="min-height: 24px; align-items: center; display: flex; gap: 8px;"
                  >
                    <div
                      data-name="box"
                      style="flex-grow: 1; display: flex;"
                    >
                      <span
                        class="typography-bold-md ui-text-text-d239"
                        data-name="text"
                        style="text-align: left;"
                      >
                        <strong>
                          Two-Factor Authentication token has been reset for undefined.
                        </strong>
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  aria-disabled="false"
                  class="ui-button-wrapper-a432 ui-button-sm-a432 ui-button-tertiary-a432 ui-button-iconbutton-a432"
                  data-name="button"
                  data-rac=""
                  data-react-aria-pressable="true"
                  id="react-aria-:r1:"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="ui-button-surface-a432"
                  >
                    <span
                      class="ui-button-content-a432"
                    >
                      <div
                        class="ui-buttonslot-icon-504b ui-buttonslot-sm-504b"
                      >
                        <span
                          class="ui-icon-icon-b14f ui-icon-sm-b14f ui-icon-regularicon-b14f"
                          data-name="icon"
                        >
                          <svg
                            aria-label="close"
                            role="img"
                          >
                            <use
                              href="#close"
                            />
                          </svg>
                        </span>
                      </div>
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </li>
      </ol>
    </section>
  </div>
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              Foo 
              <b>
                body
              </b>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 mr-auto ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Cancel
                </span>
              </button>
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-destructive-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Foo action button text
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should not render the modal when not open 1`] = `
<body
  class=""
>
  <div />
  <div
    data-name="toaster"
    data-react-aria-top-layer="true"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should render the modal 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    data-name="toaster"
    data-react-aria-top-layer="true"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
  </div>
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              Foo 
              <b>
                body
              </b>
              <p
                class="mb-2 mt-3"
              >
                Enter your password.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-userPassword"
                    placeholder="Enter your password"
                    type="password"
                  />
                </div>
              </div>
              <p
                class="mb-2 mt-3"
              >
                Enter a verification code from your authenticator app or a recovery code.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 mr-auto ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Cancel
                </span>
              </button>
              <button
                aria-disabled="true"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-destructive-cef1 ui-button-isdisabled-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Foo action button text
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should render the modal 2`] = `
<body
  class="modal-open"
>
  <div />
  <div
    data-name="toaster"
    data-react-aria-top-layer="true"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
  </div>
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              Foo 
              <b>
                body
              </b>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 mr-auto ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Cancel
                </span>
              </button>
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-destructive-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Foo action button text
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should show an error if the deletion failed 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    data-name="toaster"
    data-react-aria-top-layer="true"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
  </div>
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="alert error mb-3"
              >
                <div
                  class="iconContainer"
                >
                  <img
                    alt="icon"
                    src="test-file-stub"
                  />
                </div>
                <div
                  class="content"
                >
                  <span
                    class="label"
                  >
                    foo error deleteTwoFASecretMock
                  </span>
                </div>
              </div>
              Foo 
              <b>
                body
              </b>
              <p
                class="mb-2 mt-3"
              >
                Enter your password.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-userPassword"
                    placeholder="Enter your password"
                    type="password"
                  />
                </div>
              </div>
              <p
                class="mb-2 mt-3"
              >
                Enter a verification code from your authenticator app or a recovery code.
              </p>
              <div
                class="InputField mb-0 form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-verificationCode"
                    placeholder="Enter 6-digit verification code from app or recovery code"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 mr-auto ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Cancel
                </span>
              </button>
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-destructive-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Foo action button text
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;

exports[`<TwoFactorAuthenticationDisableModal /> should show an error if the deletion failed 2`] = `
<body
  class="modal-open"
>
  <div />
  <div
    data-name="toaster"
    data-react-aria-top-layer="true"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
  </div>
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal show"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog"
          role="document"
          style="max-width: 600px;"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Foo title
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="alert error mb-3"
              >
                <div
                  class="iconContainer"
                >
                  <img
                    alt="icon"
                    src="test-file-stub"
                  />
                </div>
                <div
                  class="content"
                >
                  <span
                    class="label"
                  >
                    foo error deleteTwoFASecretMock
                  </span>
                </div>
              </div>
              Foo 
              <b>
                body
              </b>
            </div>
            <div
              class="modalFooter modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 mr-auto ui-button-fill-cef1 ui-button-secondary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Cancel
                </span>
              </button>
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-destructive-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Foo action button text
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop show"
      />
    </div>
  </div>
</body>
`;
